include/tacuda.h

typedef enum ctStatus {
  CT_STATUS_SUCCESS = 0,
  CT_STATUS_ALLOC_FAILED = 1,
  CT_STATUS_COPY_FAILED = 2,
  CT_STATUS_KERNEL_FAILED = 3,
} ctStatus_t;
typedef enum ctMaType {
  CT_MA_SMA = 0,
  CT_MA_EMA = 1,
} ctMaType_t;
// All APIs copy host->device->host internally for ease of binding.
CTAPI_EXPORT ctStatus_t ct_sma(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_ma(const float *host_input, float *host_output,
                              int size, int period, ctMaType_t type);
CTAPI_EXPORT ctStatus_t ct_wma(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_momentum(const float *host_input, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_change(const float *host_input, float *host_output,
                                  int size, int period);
CTAPI_EXPORT ctStatus_t ct_roc(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_rocp(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_rocr(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_rocr100(const float *host_input, float *host_output,
                                   int size, int period);
CTAPI_EXPORT ctStatus_t ct_ema(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_dema(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_tema(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_t3(const float *host_input, float *host_output,
                              int size, int period, float vFactor);
CTAPI_EXPORT ctStatus_t ct_trima(const float *host_input, float *host_output,
                                 int size, int period);
CTAPI_EXPORT ctStatus_t ct_trix(const float *host_input, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_max(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_min(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_maxindex(const float *host_input, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_minindex(const float *host_input, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_minmax(const float *host_input, float *host_min,
                                  float *host_max, int size, int period);
CTAPI_EXPORT ctStatus_t ct_minmaxindex(const float *host_input,
                                       float *host_minidx, float *host_maxidx,
                                       int size, int period);
CTAPI_EXPORT ctStatus_t ct_stddev(const float *host_input, float *host_output,
                                  int size, int period);
CTAPI_EXPORT ctStatus_t ct_var(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_sum(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_rsi(const float *host_input, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_kama(const float *host_input, float *host_output,
                                int size, int period, int fastPeriod,
                                int slowPeriod);
// MACD line only (EMA_fast - EMA_slow)
CTAPI_EXPORT ctStatus_t ct_macd_line(const float *host_input,
                                     float *host_output, int size,
                                     int fastPeriod, int slowPeriod);
CTAPI_EXPORT ctStatus_t ct_macd(const float *host_input, float *host_macd,
                                float *host_signal, float *host_hist, int size,
                                int fastPeriod, int slowPeriod,
                                int signalPeriod, ctMaType_t type);
CTAPI_EXPORT ctStatus_t ct_macdfix(const float *host_input, float *host_macd,
                                   float *host_signal, float *host_hist,
                                   int size, int signalPeriod);
CTAPI_EXPORT ctStatus_t ct_mama(const float *host_input, float *host_mama,
                                float *host_fama, int size, float fastLimit,
                                float slowLimit);
CTAPI_EXPORT ctStatus_t ct_apo(const float *host_input, float *host_output,
                               int size, int fastPeriod, int slowPeriod);
CTAPI_EXPORT ctStatus_t ct_ppo(const float *host_input, float *host_output,
                               int size, int fastPeriod, int slowPeriod);
CTAPI_EXPORT ctStatus_t ct_pvo(const float *host_volume, float *host_output,
                               int size, int fastPeriod, int slowPeriod);