bindings/csharp/Tacuda.Generated.cs

// <auto-generated>
// This file was generated by bindings/generate_bindings.py.
// Do not edit manually.
// </auto-generated>
using System;
using System.Runtime.InteropServices;

namespace Tacuda.Bindings;

internal static partial class NativeMethods
{
#if WINDOWS
    private const string LibraryName = "tacuda.dll";
#elif OSX
    private const string LibraryName = "libtacuda.dylib";
#else
    private const string LibraryName = "libtacuda.so";
#endif

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_sma(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ma(float[] host_input, float[] host_output, int size, int period, int type, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_mavp(float[] host_input, float[] host_periods, float[] host_output, int size, int minPeriod, int maxPeriod, int type, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_wma(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_momentum(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_change(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_roc(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rocp(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rocr(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rocr100(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ema(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_dema(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_tema(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_t3(float[] host_input, float[] host_output, int size, int period, float vFactor, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_trima(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_trix(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_max(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_min(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_maxindex(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_minindex(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_minmax(float[] host_input, float[] host_min, float[] host_max, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_minmaxindex(float[] host_input, float[] host_minidx, float[] host_maxidx, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_stddev(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_avgdev(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_var(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_sum(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rsi(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_kama(float[] host_input, float[] host_output, int size, int period, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_macd_line(float[] host_input, float[] host_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_macd(float[] host_input, float[] host_macd, float[] host_signal, float[] host_hist, int size, int fastPeriod, int slowPeriod, int signalPeriod, int type, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_macdfix(float[] host_input, float[] host_macd, float[] host_signal, float[] host_hist, int size, int signalPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_mama(float[] host_input, float[] host_mama, float[] host_fama, int size, float fastLimit, float slowLimit, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_apo(float[] host_input, float[] host_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ppo(float[] host_input, float[] host_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_pvo(float[] host_volume, float[] host_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_sma_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ma_device(float[] device_input, float[] device_output, int size, int period, int type, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_wma_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_momentum_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_change_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_roc_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rocp_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rocr_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rocr100_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ema_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_dema_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_tema_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_t3_device(float[] device_input, float[] device_output, int size, int period, float vFactor, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_trima_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_trix_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_max_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_min_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_maxindex_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);
